--- a/visualizador.html
+++ b/visualizador.html
@@ -2,33 +2,29 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Visualizador</title>
+  <title>Visualizador - Cabine</title>
   <style>
-    body { font-family:sans-serif; text-align:center; }
-    img { max-width:90%; margin:10px; border:2px solid #333; }
+    body { background:black; color:white; text-align:center; font-family:Arial; }
+    img { max-width:90%; margin:20px auto; display:block; }
   </style>
 </head>
 <body>
-  <h1>Sua Galeria</h1>
+  <h1>Suas Fotos 🎉</h1>
   <div id="gallery"></div>
-  <script>
-    const params = new URLSearchParams(window.location.search);
-    const sessionId = params.get("session");
-    const data = JSON.parse(localStorage.getItem(sessionId) || "{}");
-    const gal = document.getElementById("gallery");
 
-    if (data.photos) {
-      data.photos.forEach(p=>{
-        let img = document.createElement("img");
-        img.src = p;
-        gal.appendChild(img);
-      });
-    }
-    if (data.digital) {
-      let img = document.createElement("img");
-      img.src = data.digital;
-      gal.appendChild(img);
-    }
+  <script>
+    const urlParams = new URLSearchParams(window.location.search);
+    const sessionId = urlParams.get("session");
+
+    // aqui em versão simples, puxando do localStorage do PC
+    const fotos = JSON.parse(localStorage.getItem("photos_" + sessionId) || "[]");
+
+    const gallery = document.getElementById("gallery");
+    fotos.forEach(src => {
+      const img = document.createElement("img");
+      img.src = src;
+      gallery.appendChild(img);
+    });
   </script>
 </body>
 </html>
