--- a/celular.html
+++ b/celular.html
@@ -4,92 +4,51 @@
   <meta charset="UTF-8">
   <title>Cabine de Fotos - Celular</title>
   <style>
-    body, html { margin:0; padding:0; background:black; color:white; font-family:Arial; text-align:center; }
-    #preview, #frozenPreview { width:100%; height:100%; object-fit:cover; position:absolute; top:0; left:0; }
-    #countdown, #message { position:absolute; top:40%; left:50%; transform:translate(-50%,-50%); font-size:5em; }
-    #message { font-size:3em; }
-    #thankyou { display:none; position:absolute; top:50%; left:50%; transform:translate(-50%,-50%); font-size:3em; }
+    body { background:#111; color:white; font-family:Arial; text-align:center; }
+    input[type="file"] { margin:20px; }
+    img { max-width:150px; margin:10px; border-radius:8px; }
+    button { padding:10px 20px; margin:10px; font-size:16px; cursor:pointer; }
   </style>
 </head>
 <body>
-  <video id="preview" autoplay playsinline></video>
-  <canvas id="frozenPreview" style="display:none;"></canvas>
-  <div id="countdown"></div>
-  <div id="message"></div>
-  <div id="thankyou">🙏 Obrigado por usar a cabine!</div>
+  <h1>Envio de Fotos</h1>
+  <input type="file" id="photoInput" accept="image/*" multiple>
+  <div id="preview"></div>
+  <button onclick="sendPhotos()">Enviar Fotos</button>
 
-  <audio id="clack" src="clack.mp3"></audio>
-
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="/assets/socket.io.js"></script>
   <script>
     const socket = io();
-    const video = document.getElementById('preview');
-    const frozenPreview = document.getElementById('frozenPreview');
-    const ctx = frozenPreview.getContext('2d');
-    const countdownEl = document.getElementById('countdown');
-    const messageEl = document.getElementById('message');
-    const thankyouEl = document.getElementById('thankyou');
-    const clack = document.getElementById('clack');
-
     const urlParams = new URLSearchParams(window.location.search);
-    const sessionId = urlParams.get("session") || Date.now().toString();
+    const sessionId = urlParams.get('session'); // pega da URL
+    const preview = document.getElementById('preview');
+    let photosToSend = [];
 
-    let totalPhotos = 3;
-
-    navigator.mediaDevices.getUserMedia({ video: true })
-      .then(stream => { video.srcObject = stream; });
-
-    async function takePhotoSequence() {
-      for (let i = 0; i < totalPhotos; i++) {
-        await startCountdown();
-        capturePhoto();
-        await wait(3000); // 3s congelada
-      }
-      endSequence();
-    }
-
-    function startCountdown() {
-      return new Promise(resolve => {
-        let count = 5;
-        countdownEl.textContent = count;
-        const interval = setInterval(() => {
-          count--;
-          countdownEl.textContent = count;
-          if (count === 2) clack.play();
-          if (count === 1) messageEl.textContent = "SORRIA 📸";
-          if (count === 0) {
-            clearInterval(interval);
-            countdownEl.textContent = "";
-            messageEl.textContent = "";
-            resolve();
-          }
-        }, 1000);
+    document.getElementById('photoInput').addEventListener('change', (e) => {
+      preview.innerHTML = "";
+      photosToSend = [];
+      Array.from(e.target.files).forEach(file => {
+        const reader = new FileReader();
+        reader.onload = (ev) => {
+          const img = document.createElement('img');
+          img.src = ev.target.result;
+          preview.appendChild(img);
+          photosToSend.push(ev.target.result);
+        };
+        reader.readAsDataURL(file);
       });
+    });
+
+    function sendPhotos() {
+      if (!photosToSend.length) { alert("Nenhuma foto selecionada"); return; }
+      photosToSend.forEach(photo => {
+        socket.emit("final_photo", { sessionId, photo });
+      });
+      alert("Fotos enviadas!");
+      preview.innerHTML = "";
+      photosToSend = [];
+      document.getElementById('photoInput').value = "";
     }
-
-    function capturePhoto() {
-      frozenPreview.width = video.videoWidth;
-      frozenPreview.height = video.videoHeight;
-      ctx.drawImage(video, 0, 0, frozenPreview.width, frozenPreview.height);
-      frozenPreview.style.display = "block";
-
-      const dataUrl = frozenPreview.toDataURL('image/png');
-      socket.emit('final_photo', { sessionId, photo: dataUrl });
-
-      setTimeout(() => { frozenPreview.style.display = "none"; }, 3000);
-    }
-
-    function wait(ms) { return new Promise(r => setTimeout(r, ms)); }
-
-    function endSequence() {
-      video.style.display = "none";
-      frozenPreview.style.display = "none";
-      countdownEl.style.display = "none";
-      messageEl.style.display = "none";
-      thankyouEl.style.display = "block";
-    }
-
-    takePhotoSequence();
   </script>
 </body>
 </html>
