--- a/visualizador.html
+++ b/visualizador.html
@@ -2,33 +2,40 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Visualizador - Cabine</title>
+  <title>Visualizador de Fotos</title>
   <style>
-    body { background:black; color:white; text-align:center; font-family:Arial; }
-    img { max-width:90%; margin:20px auto; display:block; }
+    body { background:#111; color:white; font-family:Arial; text-align:center; }
+    img { max-width:300px; margin:10px; border-radius:8px; }
   </style>
 </head>
 <body>
-  <h1>Suas Fotos 🎉</h1>
-  <div id="gallery"></div>
+  <h1>Visualizador de Fotos</h1>
+  <div id="photoContainer"></div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
-    const sessionId = urlParams.get("session");
+    const sessionId = urlParams.get('session');
+    const container = document.getElementById('photoContainer');
 
-    fetch("/api/session/" + sessionId)
-      .then(res => res.json())
-      .then(data => {
-        const gallery = document.getElementById("gallery");
-        data.photos.forEach(src => {
-          const img = document.createElement("img");
-          img.src = src;
-          gallery.appendChild(img);
+    async function loadPhotos() {
+      if (!sessionId) { container.innerHTML = "<p>Session inválida</p>"; return; }
+      try {
+        const res = await fetch(`/api/session/${sessionId}`);
+        if (!res.ok) { container.innerHTML = "<p>Erro ao carregar fotos</p>"; return; }
+        const data = await res.json();
+        container.innerHTML = "";
+        data.photos.forEach(photo => {
+          const img = document.createElement('img');
+          img.src = photo;
+          container.appendChild(img);
         });
-      })
-      .catch(() => {
-        document.getElementById("gallery").innerHTML = "<p>Sessão não encontrada</p>";
-      });
+      } catch (e) {
+        container.innerHTML = "<p>Erro de conexão</p>";
+        console.error(e);
+      }
+    }
+
+    loadPhotos();
   </script>
 </body>
 </html>
