--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
   <div id="finalMontage"></div>
   <div id="qrcode"></div>
 
+  <!-- Scripts com paths corrigidos -->
   <script src="/assets/socket.io.js"></script>
   <script src="/assets/qrcode.min.js"></script>
   <script>
-    const socket = io();
+    // Inicialização no topo
     let sessionId = Date.now().toString();
+    const socket = io();
     let photos = [];
 
+    // Receber fotos do celular
     socket.on('final_photo', data => {
       if (data.sessionId !== sessionId) return;
       photos.push(data.photo);
@@ -53,6 +56,7 @@
       canvas.width = 3322; canvas.height = 4798;
       const ctx = canvas.getContext('2d');
 
+      // Fundo moldura
       const bg = new Image();
       bg.src = "/assets/moldura.png";
       bg.onload = () => {
